--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,5 @@
 [Paths]
-moa_jar_path = /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar
+moa_jar_path = /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar
+
+[JVM]
+args = -Xmx8g -Xss10M
