--- a/environment.yml
+++ b/environment.yml
@@ -82,7 +82,7 @@ dependencies:
       - nest-asyncio==1.5.6
       - notebook==7.0.0
       - notebook-shim==0.2.3
-      - numpy==1.24.4
+      - numpy
       - overrides==7.3.1
       - packaging==23.1
       - pandas==2.0.3
