Small changes to stream and DEMO notebook, also changing the config.ini to use a relative path.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Paths]
-moa_jar_path = /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/jar/moa.jar
+moa_jar_path = ./jar/moa.jar
 
 [JVM]
 args = -Xmx8g -Xss10M
