--- a/environment.yml
+++ b/environment.yml
@@ -43,6 +43,7 @@ dependencies:
       - fastjsonschema==2.18.0
       - fonttools==4.42.1
       - fqdn==1.5.1
+      - gdown
       - idna==3.4
       - importlib-metadata==6.8.0
       - importlib-resources==6.0.0
@@ -117,6 +118,7 @@ dependencies:
       - river==0.19.0
       - rpds-py==0.9.2
       - scipy==1.10.1
+      - setuptools
       - send2trash==1.8.2
       - six==1.16.0
       - sniffio==1.3.0
