--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ exceptiongroup==1.1.2
 executing==1.2.0
 fastjsonschema==2.18.0
 fqdn==1.5.1
+gdown
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.0.0
@@ -56,7 +57,7 @@ nbformat==5.9.1
 nest-asyncio==1.5.6
 notebook==7.0.0
 notebook_shim==0.2.3
-numpy==1.24.4
+numpy
 overrides==7.3.1
 pandas==2.0.3
 pandocfilters==1.5.0
@@ -85,6 +86,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.9.2
 scipy==1.10.1
+setuptools
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
