Add multiclass tests to CPSSDS

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ dev=[
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
+pythonpath = [
+    "src",
+    "." # Used to import the test_utility module
+]
 
 [tool.hatch]
 [tool.hatch.build.targets.wheel]
