--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ dependencies = [
 [project.optional-dependencies]
 dev=[
     "pytest",
-    "jupyter"
+    "jupyter",
+    "torch",
+    "torchvision",
 ]
 
 [tool.pytest.ini_options]
