--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install '.[dev]'
-    - name: Test with pytest
+    - name: Unit Tests
       run: |
         pytest
+    - name: Notebooks
+      run: |
+        pytest --nbmake --nbmake-timeout=600 notebooks
