Support more environments better

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -18,11 +18,21 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        include:
+          - python-version: "3.9"
+            operating-system: ubuntu-latest
+          - python-version: "3.10"
+            operating-system: ubuntu-latest
+          - python-version: "3.11"
+            operating-system: ubuntu-latest
+          - python-version: "3.11"
+            operating-system: windows-latest
+          - python-version: "3.11"
+            operating-system: macos-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -33,10 +43,22 @@ jobs:
         cache: 'pip' # caching pip dependencies
     - name: Install dependencies
       run: |
-        python -m pip install '.[dev]'
-    - name: Unit Tests
+        python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install ".[dev]"
+    - name: Environment
+      run: |
+        java -version
+    - name: Test with pytest
       run: |
         pytest
     - name: Notebooks
+      # Uses the nbmake pytest plugin to run the notebooks. 
+      # See https://github.com/treebeardtech/nbmake for more information.
+      # -x flag is used to stop the test suite after the first failed test
+      # --nbmake-timeout sets the timeout for each cell in a notebook
+      # --deselect is used to skip notebooks
+      # 
+      # TODO: notebooks/Using_jpype_MOA_example.ipynb is skipped because it fails on 
+      # MacOS for an unknown reason
       run: |
-        pytest --nbmake --nbmake-timeout=600 notebooks
+        pytest --nbmake -x --nbmake-timeout=600 notebooks --deselect notebooks/Using_jpype_MOA_example.ipynb 
