--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -20,7 +20,7 @@ jobs:
 
     runs-on: ${{ matrix.operating-system }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         include:
           - python-version: "3.9"
