Add workflows for all targets

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,6 @@ ignore-vcs = true
 # Ensures that the MOA jar file is downloaded before the build starts.
 commands = [
     "python -m invoke build.download-moa",
-    "python -m invoke build.generate-stubs"
+    "python -m invoke build.stubs"
 ]
 artifacts = []
