--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,12 +4,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    paths:
-      - '**.py'
-      - '.github/workflows/unit_test.yml'
-      - 'pyproject.toml'
 jobs:
   documentation:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -24,9 +21,7 @@ jobs:
         python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
         python -m pip install ".[dev,doc]"
     - name: Build Documentation
-      run: |
-        cd docs
-        make html
+      run: invoke docs.build
     - name: Upload Documentation
       uses: actions/upload-artifact@v4
       with:
