--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -10,29 +10,17 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    paths:
-      - '**.py'
-      - '.github/workflows/unit_test.yml'
-      - 'pyproject.toml'
 
 jobs:
-  build:
-
+  tests:
+    timeout-minutes: 20
     runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: true
       matrix:
         include:
-          - python-version: "3.9"
-            operating-system: ubuntu-latest
-          - python-version: "3.10"
-            operating-system: ubuntu-latest
           - python-version: "3.11"
             operating-system: ubuntu-latest
-          - python-version: "3.11"
-            operating-system: windows-latest
-          - python-version: "3.11"
-            operating-system: macos-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -45,20 +33,8 @@ jobs:
       run: |
         python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
         python -m pip install ".[dev]"
-    - name: Environment
-      run: |
-        java -version
-    - name: Test with pytest
-      run: |
-        pytest
+    - name: PyTest
+      run: invoke test.unit
     - name: Notebooks
-      # Uses the nbmake pytest plugin to run the notebooks. 
-      # See https://github.com/treebeardtech/nbmake for more information.
-      # -x flag is used to stop the test suite after the first failed test
-      # --nbmake-timeout sets the timeout for each cell in a notebook
-      # --deselect is used to skip notebooks
-      # 
-      # TODO: notebooks/Using_jpype_MOA_example.ipynb is skipped because it fails on 
-      # MacOS for an unknown reason
-      run: |
-        pytest --nbmake -x --nbmake-timeout=600 notebooks --deselect notebooks/Using_jpype_MOA_example.ipynb 
+      run: invoke test.nb
+        
