--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -26,4 +26,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: docs
-        path: docs/_build/html
+        path: docs/_build
