--- a/.github/workflows/all_targets.yml
+++ b/.github/workflows/all_targets.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         # Python 3.9->3.11 on Ubuntu, Windows and MacOS
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.9, 3.10, 3.11]
+        python-version: ['3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
