--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -33,6 +33,12 @@ jobs:
       run: |
         python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
         python -m pip install ".[dev]"
+    - name: Cache Test Datasets
+      id: cache-test-datasets
+      uses: actions/cache@v4
+      with:
+        path: data
+        key: "test-datasets"
     - name: PyTest
       run: invoke test.unit
     - name: Notebooks
