--- a/invoke.yml
+++ b/invoke.yml
@@ -5,4 +5,8 @@ moa_url: "https://homepages.ecs.vuw.ac.nz/~antonlee/capymoa/moa.jar"
 
 # What notebooks to skip when running them as tests.
 test_skip_notebooks:
-  # - my_notebook.ipynb
+  - notebooks/04_drift_streams.ipynb
+  - notebooks/02_learners_api_examples.ipynb
+  - notebooks/Basic_Classification_Examples.ipynb
+  - notebooks/00_getting_started.ipynb
+  - notebooks/03_using_sklearn_pytorch.ipynb
