--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,9 +52,9 @@ doc=[
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
-pythonpath = [
-    "src",
-    "." # Used to import the test_utility module
+pythonpath = ["src"]
+norecursedirs = [
+    "docs/*"
 ]
 
 [tool.hatch]
