--- a/invoke.yml
+++ b/invoke.yml
@@ -6,9 +6,11 @@ moa_url: "https://homepages.ecs.vuw.ac.nz/~antonlee/capymoa/versions/240412_moa.
 # What notebooks to skip when running them as tests.
 test_skip_notebooks:
   - notebooks/00_getting_started.ipynb
-  - notebooks/01_evaluation_and_data_reading.ipynb
+  - notebooks/01_evaluation.ipynb
   - notebooks/02_learners_api_examples.ipynb
-  - notebooks/03_using_sklearn_pytorch.ipynb
+  - notebooks/03_0_using_sklearn.ipynb
+  - notebooks/03_1_using_pytorch.ipynb
+  - notebooks/03_2_preprocess_using_MOA.ipynb
   - notebooks/04_drift_streams.ipynb
   - notebooks/Basic_Classification_Examples.ipynb
   - notebooks/Creating_new_classifier.ipynb
