--- a/invoke.yml
+++ b/invoke.yml
@@ -1,7 +1,11 @@
 # This file contains the configuration for the invoke command
 
 moa_path: "src/capymoa/jar/moa.jar" 
-moa_url: "https://homepages.ecs.vuw.ac.nz/~antonlee/capymoa/versions/240412_moa.jar"
+
+# DROPBOX: When using a dropbox link, ensure that the dl=1 query parameter is 
+# present in the link. This ensures  the file is downloaded directly instead
+# of going to the dropbox page
+moa_url: "https://www.dropbox.com/scl/fi/f5xz2evjllqk87fjvi06m/240412_moa.jar?rlkey=1nwlfj3awhh3lsnme37k947lb&e=1&st=kdhx1e69&dl=1"
 
 # What notebooks to skip when running them as tests.
 test_skip_notebooks:
