--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "capymoa"
-version = "0.0.1"
+version = "0.0.0-development"
 description = "Python wrapper for MOA to allow efficient use of existing algorithms with a more modern API."
 requires-python = ">=3.9"
 # Defines the pip packages that are required by this package. These should be
@@ -24,7 +24,8 @@ dependencies = [
     "river",
     "matplotlib",
     "scikit-learn",
-    "click"
+    "click",
+    "commitizen~=3.24.0"
 ]
 
 [project.optional-dependencies]
