--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -24,6 +24,9 @@ jobs:
       run: invoke docs.build
     - name: Upload Documentation
       uses: actions/upload-artifact@v4
+      # Only upload the documentation if the push event is triggered by something
+      # being pushed to the main branch
+      if: github.event.action == 'push'
       with:
         name: docs
         path: docs/_build
