--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ path = "src/capymoa/__about__.py"
 [tool.hatch.build.targets.wheel]
 # Defines the directories included in the wheel package
 packages = ["src/capymoa", "src/moa-stubs", "src/com-stubs"]
-artifacts = ["src/capymoa/jar/moa.jar"]
+artifacts = ["src/capymoa/jar/moa.jar", "src/capymoa/jar/Home.class"]
 
 # src/moa-stubs and src/com-stubs are included in the git ignore file
 # that hatch inherits. To include them anyway we need to set ignore-vcs to true.
@@ -75,7 +75,7 @@ ignore-vcs = true
 [tool.hatch.build.targets.sdist]
 # Defines the directories included in the source distribution package (sdist).
 packages = ["src/capymoa", "src/moa-stubs", "src/com-stubs"]
-artifacts = ["src/capymoa/jar/moa.jar"]
+artifacts = ["src/capymoa/jar/moa.jar", "src/capymoa/jar/Home.class"]
 
 # src/moa-stubs and src/com-stubs are included in the git ignore file
 # that hatch inherits. To include them anyway we need to set ignore-vcs to true.
