--- a/.github/workflows/all_targets.yml
+++ b/.github/workflows/all_targets.yml
@@ -35,6 +35,30 @@ jobs:
       - name: Notebooks
         run: invoke test.nb
 
+  documentation:
+    name: Build Documentation
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+        cache: 'pip' # caching pip dependencies
+    - name: Install Dependencies
+      run: |
+        sudo apt-get install -y pandoc
+        python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install ".[dev,doc]"
+    - name: Build Documentation
+      run: invoke docs.build
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: docs/_build
+
   release:
     name: Version, Build, Publish, and Release
     runs-on: ubuntu-latest
@@ -76,3 +100,18 @@ jobs:
         if: steps.release.outputs.released == 'true'
         with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy:
+    name: Deploy to GitHub Pages
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      pages: write
+      id-token: write
+    runs-on: ubuntu-latest
+    needs: [release, documentation]
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
