--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,6 +44,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           file: docker/dockerfile
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/jupyter-capymoa:${{ env.DOCKER_TAG }},
