--- a/invoke.yml
+++ b/invoke.yml
@@ -5,8 +5,7 @@ moa_path: "src/capymoa/jar/moa.jar"
 # DROPBOX: When using a dropbox link, ensure that the dl=1 query parameter is 
 # present in the link. This ensures  the file is downloaded directly instead
 # of going to the dropbox page
-#moa_url: "https://www.dropbox.com/scl/fi/f5xz2evjllqk87fjvi06m/240412_moa.jar?rlkey=1nwlfj3awhh3lsnme37k947lb&e=1&st=kdhx1e69&dl=1"
-moa_url: "https://www.dropbox.com/scl/fi/kd2pvgqjsc3u148it1i4u/240506_moa.jar?rlkey=af1fsqoftnz1u0captpuwcx9d&st=2s3e210s&dl=1"
+moa_url: "https://www.dropbox.com/scl/fi/tiotxvygfbb6ql2w904b3/240520_moa.jar?rlkey=q0p1qj47t2nj9gbo76b94pajp&st=bva4d3wx&dl=1"
 
 # What notebooks to skip when running them as tests.
 test_skip_notebooks:
@@ -16,5 +15,6 @@ test_skip_notebooks:
   - notebooks/04_drift_streams.ipynb
   - notebooks/05_new_learner.ipynb
   - notebooks/06_advanced_API.ipynb
+  - anomaly_detection.ipynb
   - notebooks/SSL_example.ipynb
   - notebooks/prediction_interval.ipynb
