--- a/invoke.yml
+++ b/invoke.yml
@@ -5,7 +5,7 @@ moa_path: "src/capymoa/jar/moa.jar"
 # DROPBOX: When using a dropbox link, ensure that the dl=1 query parameter is 
 # present in the link. This ensures  the file is downloaded directly instead
 # of going to the dropbox page
-moa_url: "https://www.dropbox.com/scl/fi/tiotxvygfbb6ql2w904b3/240520_moa.jar?rlkey=q0p1qj47t2nj9gbo76b94pajp&st=bva4d3wx&dl=1"
+moa_url: "https://www.dropbox.com/scl/fi/88tlv50fdkn7js0hpfgvw/240522_moa.jar?rlkey=a06ap3utady3l4fz6xh85cb0n&st=m31fee1u&dl=1"
 
 # What notebooks to skip when running them as tests.
 test_skip_notebooks:
