--- a/invoke.yml
+++ b/invoke.yml
@@ -5,7 +5,7 @@ moa_path: "src/capymoa/jar/moa.jar"
 # DROPBOX: When using a dropbox link, ensure that the dl=1 query parameter is 
 # present in the link. This ensures  the file is downloaded directly instead
 # of going to the dropbox page
-moa_url: "https://www.dropbox.com/scl/fi/88tlv50fdkn7js0hpfgvw/240522_moa.jar?rlkey=a06ap3utady3l4fz6xh85cb0n&st=m31fee1u&dl=1"
+moa_url: "https://www.dropbox.com/scl/fi/fcht56z65vxe3mqpo7iq5/240530_moa.jar?rlkey=ugnasij42wwlwtfns0nr02fpk&dl=1"
 
 # What notebooks to skip when running them as tests.
 test_skip_notebooks:
@@ -15,6 +15,8 @@ test_skip_notebooks:
   - notebooks/04_drift_streams.ipynb
   - notebooks/05_new_learner.ipynb
   - notebooks/06_advanced_API.ipynb
-  - anomaly_detection.ipynb
+  - notebooks/07_pipelines.ipynb
+  - notebooks/anomaly_detection.ipynb
   - notebooks/SSL_example.ipynb
   - notebooks/prediction_interval.ipynb
+  - notebooks/save_and_load_model.ipynb
