--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,9 @@ doc=[
     # Allows to include Jupyter notebooks in the documentation
     "nbsphinx",
     # Parses markdown files
-    "myst-parser"
+    "myst-parser",
+    # Adds design elements to the documentation
+    "sphinx_design"
 ]
 
 [project.urls]
