--- a/.github/workflows/all_targets.yml
+++ b/.github/workflows/all_targets.yml
@@ -123,3 +123,4 @@ jobs:
     if: github.ref == 'refs/heads/main' && needs.release.outputs.released == 'true'
     needs: [release]
     uses: ./.github/workflows/docker.yml
+    secrets: "inherit"
