--- a/.github/workflows/all_targets.yml
+++ b/.github/workflows/all_targets.yml
@@ -70,6 +70,7 @@ jobs:
       contents: write
     outputs:
       released: ${{ steps.release.outputs.released }}
+      tag: ${{ steps.release.outputs.tag }}
     steps:
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -124,3 +125,6 @@ jobs:
     needs: [release]
     uses: ./.github/workflows/docker.yml
     secrets: "inherit"
+    with:
+      tag: ${{ needs.release.outputs.tag }}
+      is_latest: true
