--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,38 +4,38 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
-    branches:
-      - main
 jobs:
   buildx:
     name: Docker Build and Push
     environment: release
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - 
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Get tag
+        id: get_tag
+        run: |
+          tag=${GITHUB_REF#refs/*/}
+          echo "tag=${tag}"
+          echo "tag=${tag}" >> $GITHUB_OUTPUT
       
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           push: true
           platforms: linux/amd64,linux/arm64
           file: docker/dockerfile
           tags: >-
-            ${{ secrets.DOCKERHUB_USERNAME }}/jupyter-capymoa:${{  github.ref_name }}",
+            ${{ secrets.DOCKERHUB_USERNAME }}/jupyter-capymoa:${{  steps.get_tag.outputs.tag }}",
             ${{ secrets.DOCKERHUB_USERNAME }}/jupyter-capymoa:latest
-          build-args: CAPYMOA_VERSION=${{  github.ref_name }}"
-
+          build-args: CAPYMOA_VERSION=${{  steps.get_tag.outputs.tag }}"
