test: stop skipping notebooks in CI/CD pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,8 @@ doc=[
     "myst-parser",
     # Adds design elements to the documentation
     "sphinx_design",
-    "interrogate"
+    "interrogate",
+    "sphinxcontrib-programoutput"
 ]
 
 [project.urls]
