--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,14 +3,14 @@
 
 # TODO: In the future we ought to perform linting and code coverage checks
 
-name: Test and Release
+name: Release
 
 on:
   workflow_dispatch:
 
 jobs:
   test:
-    name: Unit Test all Targets
+    name: Tests
     timeout-minutes: 20
     runs-on: ${{ matrix.operating-system }}
     strategy:
@@ -45,10 +45,9 @@ jobs:
         run: invoke test.nb
 
   documentation:
-    name: Build Documentation
+    name: Documentation
     timeout-minutes: 10
     runs-on: ubuntu-latest
-    needs: [test]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -68,12 +67,12 @@ jobs:
       with:
         path: docs/_build
 
-  release:
-    name: Version, Build, Publish, and Release
+  release_pypi:
+    name: Release / PyPi
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     concurrency: release
-    needs: [test]
+    needs: [test, documentation]
     permissions:
       id-token: write
       contents: write
@@ -85,6 +84,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -112,9 +112,37 @@ jobs:
         with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
 
-  deploy:
-    name: Deploy to GitHub Pages
-    if: github.ref == 'refs/heads/main'
+  release_docker:
+    name: Release / Docker
+    environment: release
+    runs-on: ubuntu-latest
+    needs: [release_pypi]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          platforms: linux/amd64,linux/arm64
+          file: docker/dockerfile
+          tags: >-
+            ${{ secrets.DOCKERHUB_USERNAME }}/jupyter-capymoa:${{ needs.release_pypi.outputs.tag }}",
+            ${{ secrets.DOCKERHUB_USERNAME }}/jupyter-capymoa:latest
+          build-args: CAPYMOA_VERSION=${{ needs.release_pypi.outputs.tag }}"
+
+  website:
+    name: Website
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -122,7 +150,7 @@ jobs:
       pages: write
       id-token: write
     runs-on: ubuntu-latest
-    needs: [release, documentation]
+    needs: [release_pypi, documentation]
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
