--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,8 @@ dev=[
     "pytest-xdist",
     "invoke",
     "wget",
-    "commitizen~=3.24.0"
+    "commitizen~=3.24.0",
+    "ruff",
 ]
 
 doc=[
