--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ dev=[
 
 doc=[
     # Documentation generator
-    "sphinx",
+    "sphinx==8.1.3",
     # Theme for the documentation
     "pydata-sphinx-theme",
     # Allows to include Jupyter notebooks in the documentation
@@ -201,3 +201,7 @@ style = "sphinx"
 fail-under = 80
 omit-covered-files = true
 ignore-module = true
+
+# Configuration for the formatter
+[tool.ruff]
+target-version = "py310"
