--- a/invoke.yml
+++ b/invoke.yml
@@ -5,7 +5,7 @@ moa_path: "src/capymoa/jar/moa.jar"
 # DROPBOX: When using a dropbox link, ensure that the dl=1 query parameter is 
 # present in the link. This ensures  the file is downloaded directly instead
 # of going to the dropbox page
-moa_url: "https://www.dropbox.com/scl/fi/zdstofygcoikotevmyarz/250220_moa.jar?rlkey=k0dxhrjpd0xankz0f34b24ojk&st=8gdftnv8&dl=1"
+moa_url: "https://www.dropbox.com/scl/fi/pdo2eqrmx04hdgduwy6qa/250328_moa.jar?rlkey=k1jyudsqlm89fzemndw75u4rn&st=9s4zpubi&dl=1"
 
 # What notebooks to skip when running them as tests.
 # YOU SHOULD NOT SKIP NOTEBOOKS!
