docs: add license to pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ name = "capymoa"
 dynamic = ['version']
 description = "Python wrapper for MOA to allow efficient use of existing algorithms with a more modern API."
 readme = "README.md"
+license = "BSD-3-Clause"
+license-files = ["LICENSE"]
 homepage = "https://capymoa.org"
 repository = "https://github.com/adaptive-machine-learning/CapyMOA"
 authors = [
