--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   test:
     name: Tests
-    timeout-minutes: 20
+    timeout-minutes: 60
     runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: true
@@ -61,8 +61,8 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get install -y pandoc
-        python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
-        python -m pip install ".[dev,doc]"
+        python -m pip install torch~=2.9.1 torchvision~=0.24.1 --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install -U ".[dev,doc]"
     - name: Build Documentation
       run: python -m invoke docs.build
     - name: Upload artifact
